# news-scraping

./: .dockerignore  .env.template  .flake8  .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml
src/: app.py  engine.py  engine_v2.py  main.py  playground.ipynb  soup_helprs.py
src/api/article/: repository.py
src/api/feed/: feed.py  repository.py
src/api/feedoutlet/: repository.py
src/api/lib/: db.py  dependencies.py  exceptions.py
src/api/scrapingjob/: __init__.py  repository.py
src/api/source/: repository.py  source.py
src/api/user/: __init__.py  repository.py
src/api/v2/: __init__.py
src/models/: __init__.py  article.py  custom_base_model.py  feed.py  medium.py  mongo.py  nine_entertainment.py  scrapingjob.py  source.py  user.py
src/scrapers/afr/: afr.py
src/scrapers/aljazeera/: aljazeera.py
src/scrapers/bbc/: bbc.py
src/scrapers/core/: __init__.py  core.py
src/scrapers/guardian/: guardian.py
src/scrapers/medium/: __init__.py  medium.py  query.py
src/scrapers/nytimes/: nytimes.py
src/scrapers/theage/: theage.py
src/v2/: README.md  article_info_agent.py  article_link_agent.py  article_link_scraper.py  article_links_agent.py  article_links_scraper.py  engine.py  heuristic.py  html_parser.py  scraper.py  soup_helpers.py  text_helpers.py  tracer.py
src/v2/agents/: article_info_agent.py  article_links_agent.py  manager.py  rewoo.py
src/v2/client/: __init__.py  base_queries.py  helpers.py  wrappers.py
src/v2/models/: feed.py  (+6 more)
templates/: medium.cfg  nytimes.cfg
tests/: conftest.py  test_html_parser.py  test_soup_helpers.py
(+20 files in other folders)
